--- a/package.json
+++ b/package.json
@@ -35,14 +35,17 @@
     "@types/eslint": "8.56.10",
     "@typescript-eslint/eslint-plugin": "7.8.0",
     "@typescript-eslint/parser": "7.8.0",
+    "autoprefixer": "10.4.19",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-svelte": "2.38.0",
+    "postcss": "8.4.38",
     "prettier": "3.2.5",
     "prettier-plugin-svelte": "3.2.3",
     "publint": "0.2.7",
     "svelte": "5.0.0-next.130",
     "svelte-check": "3.7.1",
+    "tailwindcss": "3.4.3",
     "tslib": "2.6.2",
     "typescript": "5.4.5",
     "vite": "5.2.11",
