--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "svelte": ">=5.0.0"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "3.2.0",
+    "@sveltejs/adapter-vercel": "5.3.0",
+    "@sveltejs/enhanced-img": "0.2.0",
     "@sveltejs/kit": "2.5.7",
     "@sveltejs/package": "2.3.1",
     "@sveltejs/vite-plugin-svelte": "3.1.0",
