--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "test": "vitest",
     "lint": "prettier --check . && eslint .",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "release": "release-it"
   },
   "devDependencies": {
     "@sveltejs/adapter-vercel": "5.3.0",
