--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,9 @@
 {
-  "plugins": ["prettier-plugin-svelte"],
+  "plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
   "printWidth": 100,
   "singleQuote": true,
+  "tailwindConfig": "./tailwind.config.js",
+  "tailwindFunctions": ["cn"],
   "overrides": [
     {
       "files": "*.svelte",
