--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "postcss": "8.4.38",
     "prettier": "3.2.5",
     "prettier-plugin-svelte": "3.2.3",
+    "prettier-plugin-tailwindcss": "0.5.14",
     "publint": "0.2.7",
     "release-it": "17.2.1",
     "svelte": "5.0.0-next.135",
