--- a/package.json
+++ b/package.json
@@ -84,7 +84,8 @@
     },
     "hooks": {
       "before:init": [
-        "pnpm check"
+        "pnpm check",
+        "pnpm test"
       ],
       "after:bump": [
         "pnpm package"
