--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
     "format": "prettier --write .",
     "release": "release-it"
   },
+  "dependencies": {
+    "@floating-ui/dom": "1.6.5"
+  },
   "devDependencies": {
     "@sveltejs/adapter-vercel": "5.3.0",
     "@sveltejs/enhanced-img": "0.2.0",
@@ -72,7 +75,13 @@
     "vitest": "1.6.0"
   },
   "peerDependencies": {
-    "svelte": ">=5.0.0"
+    "svelte": ">=5.0.0",
+    "@floating-ui/dom": ">=1.6.0"
+  },
+  "peerDependenciesMeta": {
+    "@floating-ui/dom": {
+      "optional": true
+    }
   },
   "release-it": {
     "git": {
