--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,7 @@
   "plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
   "printWidth": 100,
   "singleQuote": true,
+  "bracketSpacing": false,
   "tailwindConfig": "./tailwind.config.js",
   "tailwindFunctions": ["cn"],
   "overrides": [
